# master/src/main/scala/org/apache/celeborn/service/deploy/master/http/api/v1/ApplicationResource.scala
@@ -17,8 +17,7 @@
 
 package org.apache.celeborn.service.deploy.master.http.api.v1
 
-import java.util
-import javax.ws.rs.{Consumes, GET, Path, Produces, QueryParam}
+import javax.ws.rs.{Consumes, DELETE, GET, Path, POST, Produces}
 import javax.ws.rs.core.MediaType
 
 import scala.collection.JavaConverters._
@@ -28,7 +27,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponse
 import io.swagger.v3.oas.annotations.tags.Tag
 
 import org.apache.celeborn.common.util.Utils
-import org.apache.celeborn.rest.v1.model.{AppDiskUsageData, AppDiskUsageSnapshotData, AppDiskUsageSnapshotsResponse, ApplicationHeartbeatData, ApplicationsHeartbeatResponse, HandleResponse, HostnamesResponse}
+import org.apache.celeborn.rest.v1.model.{AppDiskUsageData, AppDiskUsageSnapshotData, AppDiskUsageSnapshotsResponse, ApplicationHeartbeatData, ApplicationsHeartbeatResponse, DeleteAppsRequest, HandleResponse, HostnamesResponse, ReviseLostShufflesRequest}
 import org.apache.celeborn.server.common.http.api.ApiRequestContext
 import org.apache.celeborn.service.deploy.master.Master
 
@@ -53,6 +52,19 @@ class ApplicationResource extends ApiRequestContext {
             .appId(appId)
             .lastHeartbeatTimestamp(heartbeat)
         }.toSeq.asJava)
+  }
+
+  @ApiResponse(
+    responseCode = "200",
+    content = Array(new Content(
+      mediaType = MediaType.APPLICATION_JSON,
+      schema = new Schema(implementation = classOf[HandleResponse]))),
+    description = "Delete resource of an app")
+  @DELETE
+  def deleteApp(request: DeleteAppsRequest): HandleResponse = {
+    val apps = request.getApps.asScala
+    apps.foreach(app => statusSystem.deleteApp(app))
+    new HandleResponse().success(true).message(s"deleted shuffles of app ${apps}")
   }
 
   @ApiResponse(
@@ -96,41 +108,18 @@ class ApplicationResource extends ApiRequestContext {
     new HostnamesResponse().hostnames(statusSystem.hostnameSet.asScala.toSeq.asJava)
   }
 
-  @Path("/reviseLostShuffles")
+  @Path("/revise_lost_shuffles")
   @ApiResponse(
     responseCode = "200",
     content = Array(new Content(
       mediaType = MediaType.APPLICATION_JSON,
       schema = new Schema(implementation = classOf[HandleResponse]))),
-    description =
-      "Revise lost shuffles")
-  @GET
-  def reviseLostShuffles(
-      @QueryParam("app") appId: String,
-      @QueryParam("shuffleIds") shufflesIds: String): HandleResponse = {
-    val shuffles = new util.ArrayList[Integer]()
-    shufflesIds.split(",").foreach { p =>
-      shuffles.add(Integer.parseInt(p))
-    }
-    if (!shuffles.isEmpty) {
-      httpService.reviseLostShuffles(appId, shuffles)
-    }
-    new HandleResponse().success(true).message("revise lost shuffle done")
+    description = "Revise lost shuffles")
+  @POST
+  def reviseLostShuffles(request: ReviseLostShufflesRequest): HandleResponse = {
+    val appId = request.getAppId
+    val shuffleIds = request.getShuffleIds
+    statusSystem.reviseLostShuffles(appId, shuffleIds)
+    new HandleResponse().success(true).message("revised lost shuffles done")
   }
-
-  @Path("/deleteApps")
-  @ApiResponse(
-    responseCode = "200",
-    content = Array(new Content(
-      mediaType = MediaType.APPLICATION_JSON,
-      schema = new Schema(implementation = classOf[HandleResponse]))),
-    description =
-      "Delete resource of an app")
-  @GET
-  def deleteApp(
-      @QueryParam("apps") apps: String): HandleResponse = {
-    httpService.deleteApps(apps)
-    new HandleResponse().success(true).message(s"delete shuffles of app ${apps}")
-  }
-
 }
